[package]
name = "ngurra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", tag="v0.125.4" }
rusqlite = { version = "0.30.0", features = ["bundled"] }
chrono = "0.4.37"
time = "0.3"
uuid = { version = "0.8", features = ["v4"] }
env_logger = "0.9"
log = "0.4.20"
catppuccin = "1.4.0"
rust-embed = "8.2.0"
anyhow = "1.0.80"
fsrs = { git = "https://github.com/open-spaced-repetition/fsrs-rs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
smallvec = "1.13.2"
